oop_mro/tests/trybuild/fail_override_class.stderr
error: `#[override]` is only allowed on virtual methods
 --> tests/trybuild/fail_override_class.rs:5:11
  |
5 |     class Animal {}
  |           ^^^^^^
