oop_mro/tests/trybuild/fail_override_class.rs
use oop_mro::prelude::*;

oop_class! {
    #[override]
    class Animal {}
}

fn main() {}
